--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "author": "",
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "apexcharts": "^3.41.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.5.3",
+    "lucide-react": "^0.363.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -22,9 +26,12 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
