--- a/components.json
+++ b/components.json
@@ -12,6 +12,6 @@
   },
   "aliases": {
     "components": "@/src/components",
-    "utils": "@/src/lib/utils.ts"
+    "utils": "@/lib/utils.ts"
   }
 }
