--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "author": "",
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.15.0",
     "apexcharts": "^3.41.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
