--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "seann",
   "dependencies": {
+    "@cycjimmy/jsmpeg-player": "^6.0.5",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
