--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "sort-by": "^0.0.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
